random generating colors

--- a/style/active.css
+++ b/style/active.css
@@ -16,10 +16,10 @@ button:active {
 
 .equal-button:active {
     transition: box-shadow .1s;
-    box-shadow: 1px .56px 2px #9B3DE3, -4px -4px 4px #ffffff;
+    box-shadow: 1px .56px 2px var(--random-bg-color-primary), -4px -4px 4px #ffffff;
 }
 
 .math_operation-button:active {
     transition: box-shadow .06s;
-    box-shadow: 3px 3px 2px #D3BDE9, -4px -4px 4px #ffffff;
+    box-shadow: 3px 3px 2px var(--random-bg-color-accent), -4px -4px 4px #ffffff;
 }
