--- a/style/animation.css
+++ b/style/animation.css
@@ -1,17 +1,17 @@
 @keyframes floating-plate {
     0% {
-        box-shadow: 20px 20px 30px #CBD2D4;
+        box-shadow: 20px 20px 30px #b7bec0;
     }
     23% {
-        box-shadow: 30px 30px 40px #CBD2D4;
+        box-shadow: 30px 30px 40px #b7bec0;
     }
     50% {
-        box-shadow: 10px 10px 18px #CBD2D4;
+        box-shadow: 10px 10px 18px #b7bec0;
     }
     78% {
-        box-shadow: 30px 30px 40px #CBD2D4;
+        box-shadow: 30px 30px 40px #b7bec0;
     }
     100% {
-        box-shadow: 20px 20px 30px #CBD2D4;
+        box-shadow: 20px 20px 30px #b7bec0;
     }
 }
