--- a/style/style.css
+++ b/style/style.css
@@ -88,7 +88,7 @@ button {
 
 .output {
     font-family: 'Roboto', sans-serif;
-    background-color: rgba(0,  0, 0, 0.041);
+    /* background-color: rgba(0,  0, 0, 0.041); */
     grid-column: 1 / -1;
     display: flex;
     flex-direction: column;
