--- a/style/animation.css
+++ b/style/animation.css
@@ -3,10 +3,10 @@
         box-shadow: 20px 20px 30px #b7bec0;
     }
     23% {
-        box-shadow: 30px 30px 40px #b7bec0;
+        box-shadow: 30px 30px 40px #c2c8ca;
     }
     50% {
-        box-shadow: 10px 10px 18px #b7bec0;
+        box-shadow: 10px 10px 18px #c2c8ca;
     }
     78% {
         box-shadow: 30px 30px 40px #b7bec0;
