--- a/src/assets/css/active.css
+++ b/src/assets/css/active.css
@@ -1,6 +1,6 @@
 
 button:active {
-    /* transition: box-shadow .0s; */
+    transition: box-shadow .0s;
     box-shadow: 3px 3px 2px #ffffff, -1px -1px 4px #CBD2D4;
 }
 
