--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -34,8 +34,6 @@
     --random-bg-color-accent-tool: #3B1AF305;
 
     --random-heading-color: #4B017A;
-
-    --section-width: 0;
 }
 
 *, *::before, *::after {
@@ -45,12 +43,20 @@
     -webkit-tap-highlight-color: transparent;
 }
 
+html, body{
+    height:100%;
+    width:100%;
+    font-family: 'Raleway', sans-serif;
+    background-color:#efefef;
+    display: table;
+    text-align: center;
+  }
+
 body {
     padding: 0;
     margin: 0;
     background: linear-gradient(to top, #E3E7EA, #FEFEFE);
 }
-
 
 h1 {
     font-family: 'Comfortaa', sans-serif;
@@ -91,7 +97,7 @@ section {
 
 .flex-2 {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     gap: 10px;
 }
