key logger added

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -43,6 +43,10 @@
     -webkit-tap-highlight-color: transparent;
 }
 
+*:focus {
+    outline: none;
+}
+
 html, body{
     height:100%;
     width:100%;
@@ -50,7 +54,7 @@ html, body{
     background-color:#efefef;
     display: table;
     text-align: center;
-  }
+}
 
 body {
     padding: 0;
